--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push --force --config=./drizzle.config.ts",
-    "db:seed": "tsx db/seed.ts"
+    "vite": "^5.4.19",
+    "db:seed": "tsx db/seed.ts",
+    "esbuild": "^0.24.2"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
